@@ -16,6 +16,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
+server/apply.c: changed the comparaison code between the weapon's name and the
+    player's, so that a weapon created by "gro" cannot be used by "gros.
+    Fix for bug #1539150
 server/c_object.c: modifier command_take so it is less noisy about no_pick items
     when doing a "get all" request.
     Fix for bug #1539122
